Kernel driver upgrades
Kernel can now run up to 67 Hz (if the server could handle that)
Frame masks are not yet implemented

--- a/software/uclinux/stonyman/.gitignore
+++ b/software/uclinux/stonyman/.gitignore
@@ -2,6 +2,10 @@ stonyman
 .tmp_versions
 Module.symvers
 modules.order
+stonyman_2.ko
+stonyman_2.mod.*
+stonyman_2.o
+.stonyman_2.*
 stonyman.ko
 stonyman.mod.*
 stonyman.o
