Updated server-side files to handle 2 cameras
Also changed them to work with senseye_client

--- a/software/uclinux/senseye_serv/.gitignore
+++ b/software/uclinux/senseye_serv/.gitignore
@@ -2,3 +2,7 @@ senseye_serv
 senseye_serv_nomask
 senseye_serv.gdb
 senseye_serv.o
+senseye_serv_2
+senseye_serv_2_nomask
+senseye_serv_2.gdb
+senseye_serv_2.o
