--- a/software/uclinux/senseye_serv/Makefile
+++ b/software/uclinux/senseye_serv/Makefile
@@ -1,4 +1,4 @@
-EXEC = senseye_serv
+EXEC = senseye_serv_2
 
 CFLAGS		:= -Os -mcpu=cortex-m3 -mthumb -I$(INSTALL_ROOT)/A2F/root/usr/include -I ../stonyman
 LDFLAGS		:= -mcpu=cortex-m3 -mthumb -L$(INSTALL_ROOT)/A2F/root/usr/lib
