--- a/hardware/merge.cfg
+++ b/hardware/merge.cfg
@@ -21,7 +21,7 @@
 projdir = .
 
 # For convenience, this is the base name of the merged output files.
-MergeOut = ./output
+MergeOut = ./output/senseye-2
 
 #############################################################################
 # The [Options] section defines settings that control how the input files are
@@ -281,36 +281,36 @@ Repeat = 1
 
 
 
-#[senseye-2_temple_r]
-#
-#Prefix=%(projdir)s/senseye-2_temple_r/rev_a/senseye-2_temple_r
-#
-#*TopLayer=%(prefix)s.top
-#*BottomLayer=%(prefix)s.bot
-#*TopSilkscreen=%(prefix)s.slk
-#*BottomSilkscreen=%(prefix)s.bsk
-#*TopSoldermask=%(prefix)s.smt
-#*BottomSoldermask=%(prefix)s.smb
-#Drills=%(prefix)s.drd
-#BoardOutline=%(prefix)s.mil
-#
-#Repeat = 1
+[senseye-2_temple_r]
+
+Prefix=%(projdir)s/senseye-2_temple_r/rev_a/senseye-2_temple_r
+
+*TopLayer=%(prefix)s.top
+*BottomLayer=%(prefix)s.bot
+*TopSilkscreen=%(prefix)s.slk
+*BottomSilkscreen=%(prefix)s.bsk
+*TopSoldermask=%(prefix)s.smt
+*BottomSoldermask=%(prefix)s.smb
+Drills=%(prefix)s.drd
+BoardOutline=%(prefix)s.mil
+
+Repeat = 1
 
 
-#[senseye-2_temple_l]
-#
-#Prefix=%(projdir)s/senseye-2_temple_l/rev_a/senseye-2_temple_l
-#
-#*TopLayer=%(prefix)s.top
-#*BottomLayer=%(prefix)s.bot
-#*TopSilkscreen=%(prefix)s.slk
-#*BottomSilkscreen=%(prefix)s.bsk
-#*TopSoldermask=%(prefix)s.smt
-#*BottomSoldermask=%(prefix)s.smb
-#Drills=%(prefix)s.drd
-#BoardOutline=%(prefix)s.mil
-#
-#Repeat = 1
+[senseye-2_temple_l]
+
+Prefix=%(projdir)s/senseye-2_temple_l/rev_a/senseye-2_temple_l
+
+*TopLayer=%(prefix)s.top
+*BottomLayer=%(prefix)s.bot
+*TopSilkscreen=%(prefix)s.slk
+*BottomSilkscreen=%(prefix)s.bsk
+*TopSoldermask=%(prefix)s.smt
+*BottomSoldermask=%(prefix)s.smb
+Drills=%(prefix)s.drd
+BoardOutline=%(prefix)s.mil
+
+Repeat = 1
 
 
 
