use oln instead of mil

--- a/hardware/merge.cfg
+++ b/hardware/merge.cfg
@@ -260,7 +260,7 @@ Prefix=%(projdir)s/senseye-2/rev_a/senseye-2
 *TopSoldermask=%(prefix)s.smt
 *BottomSoldermask=%(prefix)s.smb
 Drills=%(prefix)s.drd
-BoardOutline=%(prefix)s.mil
+BoardOutline=%(prefix)s.oln
 
 # If this job does not have drill tool sizes embedded in the Excellon file, it
 # needs to have a separate tool list file that maps tool names (e.g., 'T01') to
@@ -292,7 +292,7 @@ Prefix=%(projdir)s/senseye-2_temple_r/rev_a/senseye-2_temple_r
 *TopSoldermask=%(prefix)s.smt
 *BottomSoldermask=%(prefix)s.smb
 Drills=%(prefix)s.drd
-BoardOutline=%(prefix)s.mil
+BoardOutline=%(prefix)s.oln
 
 Repeat = 1
 
@@ -308,10 +308,9 @@ Prefix=%(projdir)s/senseye-2_temple_l/rev_a/senseye-2_temple_l
 *TopSoldermask=%(prefix)s.smt
 *BottomSoldermask=%(prefix)s.smb
 Drills=%(prefix)s.drd
-BoardOutline=%(prefix)s.mil
+BoardOutline=%(prefix)s.oln
 
 Repeat = 1
-
 
 
 ##############################################################################
